# gRPC_server_client_for_image_processing

./: CMakeLists.txt  README.md  build  common.cmake  setup
include/: image_client.h  image_helper.h  image_server.h
src/: image_client.cpp  image_helper.cpp  image_server.cpp
